# variational-learning-playground

./: LICENSE  README.md  pyproject.toml
docs/: getting_started.md  installation.md  uv.md
docs/results-reproduction/: ivon.md  mbr.md
docs/tasks/: index.md
